<resources>
    <!-- Home/Main menu -->
    <string name="app_name">Storybook</string>
    <string name="getting_started">Getting Started</string>
    <string name="helper_classes">Helper Classes</string>
    <string name="surfaces">Surfaces</string>
    <string name="alerts">Alerts</string>
    <string name="content">Content</string>
    <string name="inputs">Inputs</string>
    <string name="navigation">Navigation</string>
    <string name="progress">Progress</string>

    <!-- Inputs Screen -->
    <string name="button">Button</string>
    <string name="checkbox">Checkbox</string>
    <string name="dropdown">Dropdown</string>
    <string name="text_field">TextField</string>
    <string name="phoneput">Phoneput</string>
    <string name="pinput">Pinput</string>
    <string name="radio">Radio</string>
    <string name="toggle_switch">Switch</string>  <!-- "switch" seems to be a reserved word -->
    <string name="text_area">Textarea</string>

    <!-- Compose Components -->
    <string name="compose_button">ComposeButton</string>
    <string name="compose_checkbox">ComposeCheckbox</string>
    <string name="compose_checkbox_with_label">ComposeCheckboxWithLabel</string>
    <string name="compose_dropdown">ComposeDropdown</string>
    <string name="compose_textfield">ComposeTextField</string>
    <string name="compose_numeric_textfield">ComposeNumericTextField</string>
    <string name="compose_phoneput">ComposePinput (TextInput - Phone)</string>
    <string name="compose_pinput">ComposePinput (TextInput - PIN)</string>
    <string name="compose_radio">ComposeRadio</string>
    <string name="compose_switch">ComposeSwitch</string>
    <string name="compose_switch_with_label">ComposeSwitchWithLabel</string>
    <string name="compose_textarea">ComposeTextarea (multiline Text)</string>

    <!-- ViewModel -->
    <string name="viewmodel_button_clicked">ViewModel: Button clicked %d times.</string>

</resources>