<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_mcafee_logo"
                android:layout_marginStart="@dimen/material_medium"
                android:elevation="2dp"
                app:tint="@color/colorAccent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/app_name"
                android:textSize="@dimen/text_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/gettingStartedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/getting_started"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/bg_menu_button"
            android:layout_marginTop="@dimen/material_xlarge"
            android:layout_marginHorizontal="@dimen/material_xlarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/helperClassesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/helper_classes"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/bg_menu_button"
            android:layout_marginTop="@dimen/material_large"
            android:layout_marginHorizontal="@dimen/material_xlarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gettingStartedButton" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/surfacesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/surfaces"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/bg_menu_button"
            android:layout_marginTop="@dimen/material_large"
            android:layout_marginHorizontal="@dimen/material_xlarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/helperClassesButton" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/alertsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alerts"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/bg_menu_button"
            android:layout_marginTop="@dimen/material_large"
            android:layout_marginHorizontal="@dimen/material_xlarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/surfacesButton" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/contentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/bg_menu_button"
            android:layout_marginTop="@dimen/material_large"
            android:layout_marginHorizontal="@dimen/material_xlarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/alertsButton" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/inputsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inputs"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/bg_menu_button"
            android:layout_marginTop="@dimen/material_large"
            android:layout_marginHorizontal="@dimen/material_xlarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contentButton" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/navigationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/navigation"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/bg_menu_button"
            android:layout_marginTop="@dimen/material_large"
            android:layout_marginHorizontal="@dimen/material_xlarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputsButton" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/progressButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/progress"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/bg_menu_button"
            android:layout_marginTop="@dimen/material_large"
            android:layout_marginHorizontal="@dimen/material_xlarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/navigationButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>